syntax = "proto3";

option java_package = "org.jeonfeel.moeuibit2";
option java_multiple_files = true;

message KoreanCoinNameComponent {
  string key = 1;
  string value = 2;
}

message KoreanCoinNameCache {
  repeated KoreanCoinNameComponent korean_coin_name_components = 1;
}

message EnglishCoinNameComponent {
  string key = 1;
  string value = 2;
}

message EnglishCoinNameCache {
  repeated EnglishCoinNameComponent english_coin_name_map = 1;
}